feat: Move CMakeList to src for Eclipse project creation and Add matplotlib C++ wrapper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(MPC)
+project(MPC_Project)
 
 cmake_minimum_required (VERSION 3.5)
 
@@ -9,11 +9,12 @@ add_definitions(-std=c++11 -O3)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/MPC.cpp src/main.cpp)
+set(sources ./MPC.cpp ./main.cpp)
 
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
-include_directories(src/Eigen-3.3)
+include_directories(./Eigen-3.3)
+
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
@@ -25,5 +26,6 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 add_executable(mpc ${sources})
 
-target_link_libraries(mpc ipopt z ssl uv uWS)
-
+find_package(PythonLibs 2.7)
+target_include_directories(mpc PRIVATE ${PYTHON_INCLUDE_DIRS})
+target_link_libraries(mpc ipopt z ssl uv uWS ${PYTHON_LIBRARIES})
